--- a/redes-II/test3/net-b/web/site/index.html
+++ b/redes-II/test3/net-b/web/site/index.html
@@ -11,7 +11,7 @@
     <p>Olá, seja bem-vindo a empresa B.</p>
     <p>Estamos felizes em te receber.</p>
 
-    <a href="http://localhost:8052">Voltar</a>
+    <a href="http://localhost:8052">Atualizar</a>
     
 </body>
 </html>
